# torso-gui

./: Fet ny version av SGui.txt  ProjectHome.md  abbreviations.txt  att fixa.txt  readme.txt.txt
CompilerFiles/: project files to version control - visual studio.txt
CompilerFiles/CMake/: readme.txt
CompilerFiles/CMake/SGui/: callCMake.sh
CompilerFiles/CMake/Test/: callCMake.sh
CompilerFiles/VS12/: SGui.sln
CompilerFiles/VS12/SGui/: SGui.vcxproj  SGui.vcxproj.filters
CompilerFiles/VS12/Test/: Test.vcxproj  Test.vcxproj.filters
CompilerFiles/VS14/SGui/: SGui.vcxproj
CompilerFiles/VS14/Test/: Test.vcxproj
CompilerFiles/VS19/: SGui.sln
CompilerFiles/VS19/SGui/: SGui.vcxproj  SGui.vcxproj.filters
CompilerFiles/VS19/Test/: Test.vcxproj  (+1 more)
SGui/: ActionList.cpp  ActionList.h  ActionSurface.cpp  ActionSurface.h  Box.cpp  Box.h  CMakeLists.txt  Color.h  Component.h  ConcreteRectIfc.cpp  ConcreteRectIfc.h  ConcreteWRectIfc.cpp  ConcreteWRectIfc.h  Event.h  EventQueue.h  EventReceiver.cpp  EventReceiver.h  EventReciever.cpp  EventReciever.h  EventStack.h  Events.h  Font.cpp  Font.h  GraphState.cpp  GraphState.h  Hashtable.cpp  Hashtable.h  Image.cpp  Image.h  LinkedRectIfc.cpp  LinkedRectIfc.h  LinkedWRectIfc.cpp  LinkedWRectIfc.h  Rect.cpp  Rect.h  RectIfc.cpp  RectIfc.h  RenderContext.h  RenderObj.h  SGui.cpp  (+42 more)
SGuiExternal/: GLRenderContext.cpp  GLRenderContext.h  gl_declares.cpp  gl_includes.h  win_includes.h
Test/: CMakeLists.txt  SDLWindow.cpp  SDLWindow.h  Test.cpp  WinWindow.cpp  WinWindow.h  Window.cpp  Window.h  win_declares.h  win_includes.h
